@@ -67,6 +67,7 @@ Data Changes:
 - Added missing Carbines range category, which maps to Submachine Guns ranges per Street Lethal. 
 - Removed legacy custom_ranges.xml file from Neon Anarchy House Rules customdata.
 - Fixed the Krime Pack not requiring a parent weapon with (belt) ammo.
+- No Future and Krime Katalog content can now properly show up when using the Shadowrun Missions Rules custom dataset.
 
 Changed/New Strings:
 - Checkbox_Options_SpecializationsBreakSkillGroups
